// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/any.proto";
import "google/type/interval.proto";
import "wfa/measurement/reporting/v2alpha/media_type.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "EventGroupProto";
option go_package = "github.com/world-federation-of-advertisers/cross-media-measurement/reporting/apiv2alpha/reportingpb";

// A grouping of events defined by a `DataProvider`. For example, a single
// campaign or creative defined in a publisher's ad system.
message EventGroup {
  option (google.api.resource) = {
    type: "reporting.halo-cmm.org/EventGroup"
    pattern: "measurementConsumers/{measurement_consumer}/eventGroups/{event_group}"
    singular: "eventGroup"
    plural: "eventGroups"
  };

  // Resource name.
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // Resource name of the corresponding `EventGroup` in the CMMS API.
  string cmms_event_group = 2 [
    (google.api.resource_reference).type = "halo.wfanet.org/EventGroup",
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Resource name of the parent `DataProvider` in the CMMS API.
  string cmms_data_provider = 3 [
    (google.api.resource_reference).type = "halo.wfanet.org/DataProvider",
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // ID referencing the `EventGroup` in an external system, provided by the
  // `DataProvider`.
  string event_group_reference_id = 4;

  // The template that events associated with this `EventGroup` conform to.
  message EventTemplate {
    // The type of the Event Template. A fully-qualified protobuf message type.
    //
    // The user needs to make sure that the specified template type already
    // exists and is accessible.
    string type = 1 [(google.api.field_behavior) = REQUIRED];
  }
  // The `EventTemplate`s that events associated with this `EventGroup` conform
  // to.
  repeated EventTemplate event_templates = 5;

  // Possible media types for events in this [EventGroup][].
  repeated MediaType media_types = 7
      [(google.api.field_behavior) = UNORDERED_LIST];

  // Interval for which this [EventGroup][] is known to have events, subject to
  // [DataProvider.data_availability_intervals][wfa.measurement.api.v2alpha.DataProvider.data_availability_intervals].
  //
  // If this field is set then [google.type.Interval.start_time][] is required.
  google.type.Interval data_availability_interval = 9;

  // Common metadata structure for an [EventGroup][].
  message EventGroupMetadata {
    // Metadata for an [EventGroup][] containing ad impression events.
    message AdMetadata {
      // Metadata for a brand advertising campaign.
      message CampaignMetadata {
        // Name of the brand.
        string brand_name = 1 [(google.api.field_behavior) = REQUIRED];
        // Name of the ad campaign.
        string campaign_name = 2 [(google.api.field_behavior) = REQUIRED];
      }
      // Metadata for an advertising campaign.
      CampaignMetadata campaign_metadata = 1
          [(google.api.field_behavior) = REQUIRED];
    }

    // Metadata. Required.
    oneof metadata {
      // Metadata for an [EventGroup][] containing ad impression events.
      AdMetadata ad_metadata = 1;
    }
  }
  // Metadata for this [EventGroup][]. This will eventually replace [metadata][]
  // and be required.
  EventGroupMetadata event_group_metadata = 8;

  // Wrapper for per-EDP Event Group metadata.
  message Metadata {
    // The resource name of the metadata descriptor.
    string event_group_metadata_descriptor = 1
        [(google.api.resource_reference).type =
             "halo.wfanet.org/EventGroupMetadataDescriptor"];

    // The serialized value of the metadata message.
    google.protobuf.Any metadata = 2;
  }
  // The metadata of the event group. This will eventually be deprecated in
  // favor of [event_group_metadata][].
  Metadata metadata = 6;
}
